@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST ConfigFile-1.0.5.tar.gz 23404 RMD160 b22d2ced3c399e16c0d7d75ddf58deadd0456ea9 SHA1 1c1116f43f9335aa842d34542b20e10f80db6df7 SHA256 19749dd674489ffbb1c89b4938509b5ed6d24be1639f2a21e3fea4c333fa2846
-EBUILD configfile-1.0.5.ebuild 630 RMD160 ade41cbdd88e5ab58c9d3ec15ed87a0c29b83825 SHA1 ae9f98e4f827c2427f190eaec3dbca5bc9fb41bc SHA256 782850f43512ceedfe62b88e272f50bac910eeb7d149e85470a4e2920df9dfce
-MISC ChangeLog 373 RMD160 f30f15054fe0f0898614c22bf707c5a35df5cf0a SHA1 8ec5c935540dcf72801836450c5840ddf27413ba SHA256 fdfaa8cb4a676d3e661aaec4f4c4e3f26e71e937270b8764e32ea3c5ae2f7944
+DIST ConfigFile-1.0.6.tar.gz 27330 RMD160 3de6d5e6eeff1ab48dfe52cdbc388466c43e6c07 SHA1 def06130e92004f012ea919527ef3e2cc70e8196 SHA256 339722184b86d53d8b361933e572b6e1478824c7eba3fb66b67d0eb5245cd038
+EBUILD configfile-1.0.6.ebuild 802 RMD160 1b09e7be80e3499e146dc5ca51e821bfff234c3c SHA1 d7d261db8de724cb0941f37f6eea4c1373aa2fc0 SHA256 675295966354e6927f34038ed040de439ea8b724764b1ff0bc2e89c68d009327
+MISC ChangeLog 494 RMD160 4a368a90a59f51f13d17ccd03f21b1378c95e49f SHA1 3b5a05712546d3c0268dbafe2c91d681aea55e21 SHA256 c3224fb91687f6823c9ac8b00f93498d4c31a2cde8af5f7047018f4081459fa7
 MISC metadata.xml 950 RMD160 13a70895402245e307015ff53827c92a86c574f7 SHA1 72dd34b4ade9daced7c00cbdac3a2c1bc602768a SHA256 6f189fdc1b3548af61e5443c51bf57c73a0025e5052a18e20eaef322639ab7fd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktyD/EACgkQzJrj3cAXR0nF2gCfTb2HJcBVqfJ83Bc7d3D8GERE
-RTQAoMAnXWW8C9PVItlHpa5lwCXLzBIX
-=x5s3
+iEYEARECAAYFAkt/GTYACgkQzJrj3cAXR0ly2gCfVZXyco/YbLkHwP04CkVIVGhN
+xPEAn3V86YSf76lth3NoHVU38FC6W7PF
+=pGAe
 -----END PGP SIGNATURE-----
