@@ -1,22 +1,0 @@
->=dev-lang/ghc-6.6 dev-haskell/mtl dev-haskell/parsec dev-haskell/missingh doc? ( dev-haskell/haddock ) >=dev-haskell/cabal-1.1.4
-dev-lang/ghc
-0
-http://hackage.haskell.org/packages/archive/ConfigFile/1.0.5/ConfigFile-1.0.5.tar.gz
-
-http://software.complete.org/configfile
-LGPL-2.1
-Parser and writer for handling sectioned config files in Haskell.
-~amd64 ~x86
-ghc-package haskell-cabal multilib toolchain-funcs versionator
-doc profile
-
-
-
-2
-
-compile install postinst prerm setup
-
-
-
-
-
