@@ -1,0 +1,22 @@
+>=dev-lang/ghc-6.6 >=dev-haskell/hslogger-1.0.2 >=dev-haskell/hunit-1.2.0.3 dev-haskell/mtl >=dev-haskell/network-2.2.1 dev-haskell/parsec >=dev-haskell/quickcheck-1.1.0.0 >=dev-haskell/regex-compat-0.71.0.1 dev-haskell/missingh doc? ( dev-haskell/haddock ) >=dev-haskell/cabal-1.1.4
+dev-lang/ghc
+0
+http://hackage.haskell.org/packages/archive/ConfigFile/1.0.6/ConfigFile-1.0.6.tar.gz
+test
+http://software.complete.org/configfile
+LGPL-2.1
+Parser and writer for handling sectioned config files in Haskell.
+~amd64 ~x86
+ghc-package haskell-cabal multilib toolchain-funcs versionator
+doc profile
+
+
+
+2
+
+compile install postinst prerm setup
+
+
+
+
+
