@@ -1,6 +1,10 @@
 # ChangeLog for dev-haskell/configfile
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Feb 2010; James Rowe <jnrowe@gmail.com> -configfile-1.0.5.ebuild
+  +configfile-1.0.6.ebuild:
+  Version bump [ca8].
 
   12 Nov 2009; James Rowe <jnrowe@gmail.com> configfile-1.0.5.ebuild:
   Switched to EAPI 2.
